some refactoring and cleanup to get the width and height from defined dims from adn.js on page load

--- a/AdnuntiusSDK.xcodeproj/xcshareddata/xcschemes/AdnuntiusSDKTests.xcscheme
+++ b/AdnuntiusSDK.xcodeproj/xcshareddata/xcschemes/AdnuntiusSDKTests.xcscheme
@@ -21,6 +21,11 @@
                BlueprintName = "AdnuntiusSDKTests"
                ReferencedContainer = "container:AdnuntiusSDK.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "AdnuntiusSDKTests/testApiClient()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
    </TestAction>
